interpreter-janeklang/tests/good/01_types_1.janek
int main(){
    1;
    "string";
    true;
    print(1);
    print("string");
    print(true);
    return 0;
}