interpreter-janeklang/tests/bad/06_wrongReturnType_4.janek
int skibidi(){
    return "asd";
}

int main(){
    skibidi();
}